--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ litellm = "^1.17.4"
 fastapi = "^0.109.0"
 uvicorn = "^0.25.0"
 asyncio = "^3.4.3"
+python-socketio = "^5.11.0"
 
 
 [tool.poetry.group.dev.dependencies]
