--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Ethan Sutin <ethan@sutin.net>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 pydub = "^0.25.1"
 speechbrain = "^0.5.16"
 whisperx = {git = "https://github.com/m-bain/whisperx.git"}
@@ -17,13 +17,22 @@ ctranslate2 = ">=3.22,<4"
 huggingface-hub = ">=0.13"
 tokenizers = ">=0.13,<0.16"
 onnxruntime = ">=1.14,<2"
-torch = ">=2"
-torchaudio = ">=2"
+torch = [
+	{ url = "https://download.pytorch.org/whl/cu121/torch-2.1.2%2Bcu121-cp311-cp311-win_amd64.whl", platform = "Windows" },
+	{ version = ">=2", platform = "Darwin" }
+]
+torchaudio = [
+	{ url = "https://download.pytorch.org/whl/cu121/torchaudio-2.1.2%2Bcu121-cp311-cp311-win_amd64.whl", platform = "Windows" },
+	{ version = ">=2", platform = "Darwin" }
+]
 faster-whisper = {git = "https://github.com/SYSTRAN/faster-whisper.git", rev = "0.10.0"}
 pyannote-audio = "3.1.1"
 pydantic = "^2.5.3"
 click = "^8.1.7"
-torchvision = "^0.16.2"
+torchvision = [
+    { url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.2%2Bcu121-cp311-cp311-win_amd64.whl", platform = "Windows" },
+    { version = "^0.16.2", platform = "Darwin" }
+]
 litellm = "^1.17.4"
 fastapi = "^0.109.0"
 uvicorn = "^0.25.0"
