--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ pydantic-yaml = "^1.2.0"
 sqlmodel = "^0.0.14"
 ray = {extras = ["default"], version = "^2.9.1"}
 deepgram-sdk = "^3.1.0"
+python-multipart = "^0.0.6"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
