Lots of work on Watch client (chunk uploading still not fully tested)

--- a/clients/ios/UntitledAI-Watch-App-Info.plist
+++ b/clients/ios/UntitledAI-Watch-App-Info.plist
@@ -4,5 +4,18 @@
 <dict>
 	<key>UIBackgroundModes</key>
 	<array/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>47.33.18.169</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
 </dict>
 </plist>
