iPhone app plist: added server to exceptions list

--- a/clients/ios/UntitledAI/Info.plist
+++ b/clients/ios/UntitledAI/Info.plist
@@ -14,5 +14,18 @@
 		<string>location</string>
 		<string>processing</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>47.33.18.169</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
 </dict>
 </plist>
