--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Build and Push Docker Images
 
 on:
   push:
@@ -14,9 +14,6 @@ jobs:
       contents: read
       packages: write
     steps:
-      - name: Delete huge unnecessary tools folder
-        run: rm -rf /opt/hostedtoolcache
-        
       - name: Check out the repo
         uses: actions/checkout@v2
 
@@ -29,11 +26,20 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push
+      - name: Build and push backend image
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
           push: true
           tags: etown/untitledai:latest
+          platforms: linux/amd64,linux/arm64
+
+      - name: Build and push web image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./clients/web
+          file: ./clients/web/Dockerfile
+          push: true
+          tags: etown/untitledai-web:latest
           platforms: linux/amd64,linux/arm64
