--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,9 @@ jobs:
       contents: read
       packages: write
     steps:
+      - name: Delete huge unnecessary tools folder
+        run: sudo rm -rf /opt/hostedtoolcache
+        
       - name: Check out the repo
         uses: actions/checkout@v2
 
