Fixed platformio.ini to point to repo copy of audio codec lib

--- a/clients/xiao-esp32s3-sense/firmware/platformio.ini
+++ b/clients/xiao-esp32s3-sense/firmware/platformio.ini
@@ -12,4 +12,4 @@
 platform = espressif32
 board = seeed_xiao_esp32s3
 framework = arduino
-build_flags = -L${PROJECT_DIR}/lib/espressif_esp_audio_codec_1.0.1/lib/esp32s3 -lesp_audio_codec
+build_flags = -Llib/espressif_esp_audio_codec_1.0.1/lib/esp32s3 -lesp_audio_codec
