--- a/untitledai/sample_config.yaml
+++ b/untitledai/sample_config.yaml
@@ -5,16 +5,6 @@
 # rename to config.yaml. Change settings as needed.
 #
 
-transcription:
-  hf_token: your_hugging_face_token
-  device: cpu
-  compute_type: int8
-  batch_size: 16
-  model: tiny
-  verification_threshold: 0.1
-  verification_model_source: speechbrain/spkrec-ecapa-voxceleb
-  verification_model_savedir: pretrained_models/spkrec-ecapa-voxceleb
-
 llm:
   model: ollama/llama2
   api_base_url: http://localhost:11434
@@ -35,11 +25,21 @@ deepgram:
   model: "nova-2"
   language: "en-US"
 
-streaming_transcription:
-  provider: "whisper"
-  # provider: "deepgram"
+async_whisper:
+  host: "127.0.0.1"
+  port: 8010
+  hf_token: your_hugging_face_token
+  device: cpu
+  compute_type: int8
+  batch_size: 16
+  model: tiny
+  verification_threshold: 0.1
+  verification_model_source: speechbrain/spkrec-ecapa-voxceleb
+  verification_model_savedir: pretrained_models/spkrec-ecapa-voxceleb
 
 streaming_whisper:
+  host: "127.0.0.1"
+  port: 8009
   model: "small"
   language: "en"
   silero_sensitivity: 0.4
@@ -49,6 +49,10 @@ streaming_whisper:
 async_transcription:
   provider: "whisper"
   #provider: "deepgram"
+
+streaming_transcription:
+  provider: "whisper"
+  # provider: "deepgram"
 
 database:
   url: "sqlite:///./db.sqlite3"
@@ -60,6 +64,8 @@ conversation_endpointing:
 notification:
   apn_team_id: ""
 
+# enable for LTE-M boards
 udp:
   enabled: false
-
+  host: '0.0.0.0'
+  port: 8001
