--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,10 @@ services:
   backend:
     image: etown/untitledai:latest
     environment:
-      - UNTITLEDAI_TRANSCRIPTION_HF_TOKEN=${UNTITLEDAI_TRANSCRIPTION_HF_TOKEN}
+      - UNTITLEDAI_ASYNC_WHISPER_HF_TOKEN=${UNTITLEDAI_ASYNC_WHISPER_HF_TOKEN}
       - UNTITLEDAI_USER_CLIENT_TOKEN=${UNTITLEDAI_USER_CLIENT_TOKEN:-change_me}
       - UNTITLEDAI_LLM_API_BASE_URL=${UNTITLEDAI_LLM_API_BASE_URL:-http://host.docker.internal:11434}
+      - OMP_NUM_THREADS=1
 
     shm_size: 3g
     ports:
@@ -21,8 +22,5 @@ services:
       - UNTITLEDAI_USER_CLIENT_TOKEN=${UNTITLEDAI_USER_CLIENT_TOKEN:-change_me}
     ports:
       - "3000:3000"
-    volumes:
-      - ./clients/web:/app
     depends_on:
       - backend
-
