clients/web: renamed UntitledAI -> Owl

--- a/clients/web/Dockerfile
+++ b/clients/web/Dockerfile
@@ -26,8 +26,8 @@ EXPOSE 3000
 ENV NODE_ENV production
 
 # If no url is set we assume that it's local
-ENV UNTITLEDAI_API_URL=http://host.docker.internal:8000
+ENV OWL_API_URL=http://host.docker.internal:8000
 
 # Start the app with the custom server if it's local for proxying, otherwise start the normal server
-CMD ["/bin/sh", "-c", "if [ \"$UNTITLEDAI_API_URL\" = 'http://host.docker.internal:8000' ]; then npm run startCustom; else npm start; fi"]
+CMD ["/bin/sh", "-c", "if [ \"$OWL_API_URL\" = 'http://host.docker.internal:8000' ]; then npm run startCustom; else npm start; fi"]
 
