--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,7 +42,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: etown/untitledai:latest
+          tags: etown/owl:latest
           platforms: linux/amd64,linux/arm64
 
       - name: Build and push web image
@@ -51,5 +51,5 @@ jobs:
           context: ./clients/web
           file: ./clients/web/Dockerfile
           push: true
-          tags: etown/untitledai-web:latest
+          tags: etown/owl-web:latest
           platforms: linux/amd64,linux/arm64
