--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: '3.8'
 
 services:
   backend:
-    image: etown/untitledai:latest
+    image: etown/owl:latest
     environment:
-      - UNTITLEDAI_ASYNC_WHISPER_HF_TOKEN=${UNTITLEDAI_ASYNC_WHISPER_HF_TOKEN}
-      - UNTITLEDAI_USER_CLIENT_TOKEN=${UNTITLEDAI_USER_CLIENT_TOKEN:-change_me}
-      - UNTITLEDAI_LLM_API_BASE_URL=${UNTITLEDAI_LLM_API_BASE_URL:-http://host.docker.internal:11434}
+      - OWL_ASYNC_WHISPER_HF_TOKEN=${OWL_ASYNC_WHISPER_HF_TOKEN}
+      - OWL_USER_CLIENT_TOKEN=${OWL_USER_CLIENT_TOKEN:-change_me}
+      - OWL_LLM_API_BASE_URL=${OWL_LLM_API_BASE_URL:-http://host.docker.internal:11434}
       - OMP_NUM_THREADS=1
 
     shm_size: 3g
@@ -16,10 +16,10 @@ services:
       - .:/app
 
   web:
-    image: etown/untitledai-web:latest
+    image: etown/owl-web:latest
     environment:
       - GOOGLE_MAPS_API_KEY=${GOOGLE_MAPS_API_KEY}
-      - UNTITLEDAI_USER_CLIENT_TOKEN=${UNTITLEDAI_USER_CLIENT_TOKEN:-change_me}
+      - OWL_USER_CLIENT_TOKEN=${OWL_USER_CLIENT_TOKEN:-change_me}
     ports:
       - "3000:3000"
     depends_on:
