Add alembic to windows requirements

--- a/requirements-windows.txt
+++ b/requirements-windows.txt
@@ -73,6 +73,7 @@ pvporcupine~=3.0.2
 webrtcvad~=2.0.10
 PyAudio~=0.2.14
 halo~=0.0.31
+alembic~=1.13.1
 
 # PyTorch CUDA 12.1. For a different CUDA version, change the index URL accordingly. Use the PyTorch
 # install tool if you aren't sure: https://pytorch.org/get-started/locally/
