--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,17 +9,14 @@ readme = "README.md"
 python = "^3.11"
 pydub = "^0.25.1"
 speechbrain = "^0.5.16"
-whisperx = {git = "https://github.com/m-bain/whisperx.git"}
 pandas = "^2.1.4"
 transformers = "^4.36.2"
 nltk = "^3.8.1"
-ctranslate2 = ">=3.22,<4"
 huggingface-hub = ">=0.13"
 tokenizers = ">=0.13,<0.16"
 onnxruntime = ">=1.14,<2"
 torch = ">=2"
 torchaudio = ">=2"
-faster-whisper = {git = "https://github.com/SYSTRAN/faster-whisper.git", rev = "0.10.0"}
 pyannote-audio = "3.1.1"
 pydantic = "^2.5.3"
 click = "^8.1.7"
@@ -37,6 +34,8 @@ webrtcvad = "^2.0.10"
 pyaudio = "^0.2.14"
 halo = "^0.0.31"
 alembic = "^1.13.1"
+faster-whisper = "^1.0.0"
+whisperx = {git = "https://github.com/m-bain/whisperx.git"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
