--- a/requirements-windows.txt
+++ b/requirements-windows.txt
@@ -51,11 +51,11 @@ whisperx @ git+https://github.com/m-bain/whisperx.git
 pandas~=2.1.4
 transformers~=4.36.2
 nltk~=3.8.1
-ctranslate2 >=3.22,<4
+ctranslate2>=4.0,<5
 huggingface-hub >=0.13
 tokenizers >=0.13,<0.16
 onnxruntime >=1.14,<2
-faster-whisper @ git+https://github.com/SYSTRAN/faster-whisper.git@0.10.0
+faster-whisper @ git+https://github.com/SYSTRAN/faster-whisper.git@v1.0.0
 pyannote-audio==3.1.1
 pydantic~=2.5.3
 click~=8.1.7
@@ -74,6 +74,7 @@ webrtcvad~=2.0.10
 PyAudio~=0.2.14
 halo~=0.0.31
 alembic~=1.13.1
+
 
 # PyTorch CUDA 12.1. For a different CUDA version, change the index URL accordingly. Use the PyTorch
 # install tool if you aren't sure: https://pytorch.org/get-started/locally/
