--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ halo = "^0.0.31"
 alembic = "^1.13.1"
 faster-whisper = "^1.0.0"
 whisperx = {git = "https://github.com/m-bain/whisperx.git"}
+httpx = "^0.27.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
