add python-dotenv, pytest-asyncio and pytest.ini_options

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,10 @@
 name = "owl"
 version = "0.1.0"
 description = ""
-authors = ["Bart Trzynadlowski <bart.trzy@gmail.com>", "Ethan Sutin <ethan@sutin.net>"]
+authors = [
+  "Bart Trzynadlowski <bart.trzy@gmail.com>",
+  "Ethan Sutin <ethan@sutin.net>",
+]
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -35,13 +38,18 @@ pyaudio = "^0.2.14"
 halo = "^0.0.31"
 alembic = "^1.13.1"
 faster-whisper = "^1.0.0"
-whisperx = {git = "https://github.com/m-bain/whisperx.git"}
+whisperx = { git = "https://github.com/m-bain/whisperx.git" }
+python-dotenv = "^1.0.1"
+pytest-asyncio = "^0.23.5.post1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
 
 [tool.poetry.scripts]
 owl = "owl.core.cli:cli"
+
+[tool.pytest.ini_options]
+filterwarnings = ["ignore::DeprecationWarning"]
 
 [build-system]
 requires = ["poetry-core"]
