--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,10 +40,12 @@ alembic = "^1.13.1"
 faster-whisper = "^1.0.0"
 whisperx = { git = "https://github.com/m-bain/whisperx.git" }
 python-dotenv = "^1.0.1"
-pytest-asyncio = "^0.23.5.post1"
+ruamel-yaml = "^0.18.6"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
+pytest-asyncio = "^0.23.5.post1"
+pytest-mock = "^3.12.0"
 
 [tool.poetry.scripts]
 owl = "owl.core.cli:cli"
