Adjust docker compose to import and use environment variables.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,24 +3,21 @@ version: '3.8'
 services:
   backend:
     image: etown/owl:latest
+    env_file:
+      - .env
     environment:
-      - OWL_ASYNC_WHISPER_HF_TOKEN=${OWL_ASYNC_WHISPER_HF_TOKEN}
-      - OWL_USER_CLIENT_TOKEN=${OWL_USER_CLIENT_TOKEN:-change_me}
-      - OWL_LLM_API_BASE_URL=${OWL_LLM_API_BASE_URL:-http://host.docker.internal:11434}
       - OMP_NUM_THREADS=1
-
     shm_size: 3g
     ports:
-      - "8000:8000"
+      - '${OWL_WEB_API_PORT:-8000}:${OWL_WEB_API_PORT:-8000}'
     volumes:
       - .:/app
 
   web:
     image: etown/owl-web:latest
-    environment:
-      - GOOGLE_MAPS_API_KEY=${GOOGLE_MAPS_API_KEY}
-      - OWL_USER_CLIENT_TOKEN=${OWL_USER_CLIENT_TOKEN:-change_me}
+    env_file:
+      - .env
     ports:
-      - "3000:3000"
+      - '${OWL_WEB_PORT:-3000}:${OWL_WEB_PORT:-3000}'
     depends_on:
       - backend
